--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-link-http": "^1.5.16",
     "graphql": "^14.5.8",
+    "material-ui": "^0.20.2",
     "react": "^16.10.2",
+    "react-apollo": "^3.1.3",
     "react-apollo-hooks": "^0.5.0",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
