--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.2",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "graphql": "^14.5.8",
     "material-ui": "^0.20.2",
