--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "material-ui": "^0.20.2",
     "react": "^16.10.2",
@@ -18,7 +19,8 @@
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "recharts": "^2.0.0-beta.1"
+    "recharts": "^2.0.0-beta.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +47,7 @@
     "@babel/cli": "7.1.0",
     "@babel/core": "7.1.0",
     "@babel/preset-env": "7.1.0",
-    "@babel/preset-react": "7.0.0"
+    "@babel/preset-react": "7.0.0",
+    "prettier": "^1.19.1"
   }
 }
