--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "material-ui": "^0.20.2",
     "react": "^16.10.2",
     "react-apollo": "^3.1.3",
     "react-apollo-hooks": "^0.5.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.10.2",
+    "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "recharts": "^2.0.0-beta.1",
