--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "bootstrap": "^4.4.1",
+    "clsx": "^1.1.0",
     "formik": "^2.1.4",
     "graphql": "^14.5.8",
     "material-ui": "^0.20.2",
